# simple-media-toolkit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shader/: fragment.glsl  vertex.glsl
dependencies/cutil/: CMakeLists.txt
dependencies/cutil/include/cutil/: filesystem.h  hashTable.h  list.h  math.h
dependencies/cutil/source/: filesystem.c  hashTable.c  list.c  math.c
dependencies/cutil/tests/: CMakeLists.txt  filesystem.c  hashTable.c  list.c  math.c
dependencies/cvec/: CMakeLists.txt
dependencies/cvec/include/cvec/: vec2.h
dependencies/cvec/source/: vec2.c
dependencies/cvec/tests/: CMakeLists.txt  vec2.c
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/yavec2/: CMakeLists.txt
dependencies/yavec2/include/: vec2.h
dependencies/yavec2/source/: vec2.c
include/smt/: batch.h  color.h  keyboard.h  render.h  shader.h  shaderProgram.h  smt.h  sprite.h  window.h
resources/shader/: Fragment.glsl  Vertex.glsl
source/: batch.c  color.c  keyboard.c  render.c  shader.c  smt.c  sprite.c  window.c
tests/: CMakeLists.txt  startup.c
